--- a/index.html
+++ b/index.html
@@ -17,31 +17,54 @@
             <nav class="nav">
                 <div class="container">
                     <ul class="menu">
-                        <li class="menu__list"><a href="#home" class="menu__link menu__link--active">Home</a></li>
-                        <li class="menu__list"><a href="#aboutme" class="menu__link">About me</a></li>
-                        <li class="menu__list"><a href="#skills" class="menu__link">Skills</a></li>
-                        <li class="menu__list"><a href="#portfolio" class="menu__link">Portfolio</a></li>
-                        <li class="menu__list"><a href="#contacts" class="menu__link">Contacts</a></li>
+                        <li class="menu__list lang-home"><a href="#home" class="menu__link menu__link--active" id="lang-home">Home</a></li>
+                        <li class="menu__list"><a href="#aboutme" class="menu__link" id="lang-aboutMe">About me</a></li>
+                        <li class="menu__list"><a href="#skills" class="menu__link" id="lang-skills">Skills</a></li>
+                        <li class="menu__list"><a href="#portfolio" class="menu__link" id="lang-portfolio">Portfolio</a></li>
+                        <li class="menu__list"><a href="#contacts" class="menu__link" id="lang-contacts">Contacts</a></li>
                     </ul>
                 </div>
             </nav>
             <div class="header__content">
                 <div class="header__wrapper">
-                    <div class="burger-menu">
+                    <a href="#box" class="burger-menu" onclick="openbox('box'); return false">
                         <span></span>
                         <span></span>
                         <span></span>
+                    </a>
+                    <div class="box-reg" id="box" style="display: none;">
+                        <a href="#" class="overlay" onclick="openbox('box'); return false"></a>
+                        <div class="burger__menu anim-block">
+                            <ul class="menu">
+                                <li class="menu__list"><a href="#home" class="menu__link menu__link--active">Home</a></li>
+                                <li class="menu__list"><a href="#aboutme" class="menu__link">About me</a></li>
+                                <li class="menu__list"><a href="#skills" class="menu__link">Skills</a></li>
+                                <li class="menu__list"><a href="#portfolio" class="menu__link">Portfolio</a></li>
+                                <li class="menu__list"><a href="#contacts" class="menu__link">Contacts</a></li>
+                            </ul>
+                            <div class="language">
+                                <span onclick="changeLang(en);" class="language__item language__item--active">eng</span>
+                                <span onclick="changeLang(ru);" class="language__item">ru</span>
+                            </div>
+                            <a href="#" class="close" onclick="openbox('box'); return false">x</a>
+                        </div>
                     </div>
-                    <h1 class="name__title">Denis <br> Novik</h1>
-                    <p class="text">UX | UI designer <br> 24 years old, Minsk</p>
+                    <h1 class="name__title">
+                        <p class="name" id="lang-name">Denis</з>
+                        <p class="last-name" id="lang-last-name">Novik</p>
+                    </h1>
+                    <div class="text">
+                        <p class="text__profession" id="lang-profession">UX | UI designer</p>
+                        <p class="text__age" id="lang-age">24 years old, Minsk</p>
+                    </div>
                     <div class="language">
-                        <a href="#" class="language__item language__item--active">eng</a>
-                        <a href="#" class="language__item">ru</a>
+                        <span onclick="changeLang(en);" class="language__item language__item--active">eng</span>
+                        <span onclick="changeLang(ru);" class="language__item">ru</span>
                     </div>
                 </div>
                 <div class="content__img">
                     <img src="img/img1.png" alt="#" class="img__after">
-                </div>       
+                </div>
             </div>
         </div>
     </header>
@@ -63,7 +86,7 @@
             </div>
         </section>
         <section id="skills" class="section">
-            <div class="container">          
+            <div class="container">
                 <div class="section__content">
                     <h2 class="section__title">Skills</h2>
                     <h3 class="section__sub-title">I work in such programs as</h3>
@@ -150,5 +173,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/main.js"></script>
+    <script src="js/lang.js"></script>
 </body>
 </html>
