--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/png" href = "img/logo-title.png">
     <title>Denis Novik</title>
 </head>
 <body>
@@ -95,22 +96,22 @@
                             <div class="section__item">
                                 <img src="img/photoshop.png" alt="" class="item__img">
                                 <p class="item__name">Adobe <br> Photoshop</p>
-                                <a href="#"><img src="img/stars.png" alt="" class="item__stars"></a>
+                                <span><img src="img/stars.png" alt="" class="item__stars"></span>
                             </div>
                             <div class="section__item">
                                 <img src="img/illustrator.png" alt="" class="item__img">
                                 <p class="item__name">Adobe <br> Illustrator</p>
-                                <a href="#"><img src="img/stars.png" alt="" class="item__stars"></a>
+                                <span><img src="img/stars.png" alt="" class="item__stars"></span>
                             </div>
                             <div class="section__item">
                                 <img src="img/aftereffects.png" alt="" class="item__img">
                                 <p class="item__name">Adobe <br> After Effects</p>
-                                <a href="#"><img src="img/stars.png" alt="" class="item__stars"></a>
+                                <span><img src="img/stars.png" alt="" class="item__stars"></span>
                             </div>
                             <div class="section__item">
                                 <img src="img/figma.png" alt="" class="item__img">
                                 <p class="item__name">Figma</p>
-                                <a href="#"><img src="img/stars.png" alt="" class="item__stars"></a>
+                                <span><img src="img/stars.png" alt="" class="item__stars"></span>
                             </div>
                         </div>
                     </div>
@@ -123,15 +124,32 @@
                     <h2 class="section__title">Portfolio</h2>
                     <div class="portfolio__about">
                         <div class="portfolio__item">
-                            <img src="img/portfolio1.png" alt="" class="portfolio__img">
-                            <a href="#" class="portfolio__link">Online fashion store - Homepage</a>
+                            <div class="portfolio__img">
+                                <img src="img/portfolio1.png" alt="" class="portfolio-img">
+                                <div class="portfolio__name">
+                                    <div class="portfolio__title">Online fashion store</div>
+                                </div>
+                            </div>
+                            <div class="portfolio__item-link">
+                                <a href="#" class="portfolio__link">Online fashion store - Homepage</a>
+                            </div> 
                         </div>
                         <div class="portfolio__item">
-                            <img src="img/portfolio2.png" alt="" class="portfolio__img">
+                            <div class="portfolio__img">
+                                <img src="img/portfolio2.png" alt="" class="portfolio-img">
+                                <div class="portfolio__name">
+                                    <div class="portfolio__title">Reebok Store - Concept</div>
+                                </div>
+                            </div>
                             <a href="#" class="portfolio__link">Reebok Store - Concept</a>
                         </div>
                         <div class="portfolio__item">
-                            <img src="img/portfolio3.png" alt="" class="portfolio__img">
+                            <div class="portfolio__img">
+                                <img src="img/portfolio3.png" alt="" class="portfolio-img">
+                                <div class="portfolio__name">
+                                    <div class="portfolio__title">Braun Landing Page - Concept<</div>
+                                </div>
+                            </div>
                             <a href="#" class="portfolio__link">Braun Landing Page - Concept</a>
                         </div>
                     </div>
