--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div class="portfolio__img">
                                 <img src="img/portfolio3.png" alt="" class="portfolio-img">
                                 <div class="portfolio__name">
-                                    <div class="portfolio__title">Braun Landing Page - Concept<</div>
+                                    <div class="portfolio__title">Braun Landing Page - Concept</div>
                                 </div>
                             </div>
                             <a href="#" class="portfolio__link">Braun Landing Page - Concept</a>
