--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" type = "image/png" href = "img/logo-title.png">
+    <link rel="icon" type="image/png" href="img/logo-title.png">
     <title>Denis Novik</title>
 </head>
 <body>
@@ -28,32 +28,15 @@
             </nav>
             <div class="header__content">
                 <div class="header__wrapper">
-                    <a href="#box" class="burger-menu" onclick="openbox('box'); return false">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
-                    <div class="box-reg" id="box" style="display: none;">
-                        <a href="#" class="overlay" onclick="openbox('box'); return false"></a>
-                        <div class="burger__menu anim-block">
-                            <ul class="menu">
-                                <li class="menu__list"><a href="#home" class="menu__link menu__link--active">Home</a></li>
-                                <li class="menu__list"><a href="#aboutme" class="menu__link">About me</a></li>
-                                <li class="menu__list"><a href="#skills" class="menu__link">Skills</a></li>
-                                <li class="menu__list"><a href="#portfolio" class="menu__link">Portfolio</a></li>
-                                <li class="menu__list"><a href="#contacts" class="menu__link">Contacts</a></li>
-                            </ul>
-                            <div class="language">
-                                <span onclick="changeLang(en);" class="language__item language__item--active">eng</span>
-                                <span onclick="changeLang(ru);" class="language__item">ru</span>
-                            </div>
-                            <a href="#" class="close" onclick="openbox('box'); return false">x</a>
-                        </div>
-                    </div>
                     <h1 class="name__title">
                         <p class="name" id="lang-name">Denis</з>
                         <p class="last-name" id="lang-last-name">Novik</p>
                     </h1>
+                    <button class="nav-open">
+                        <span class="nav-open__span"></span>
+                        <span class="nav-open__span"></span>
+                        <span class="nav-open__span"></span>
+                    </button>
                     <div class="text">
                         <p class="text__profession" id="lang-profession">UX | UI designer</p>
                         <p class="text__age" id="lang-age">24 years old, Minsk</p>
@@ -131,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="portfolio__item-link">
-                                <a href="#" class="portfolio__link">Online fashion store - Homepage</a>
+                                <a href="#!" class="portfolio__link">Online fashion store - Homepage</a>
                             </div> 
                         </div>
                         <div class="portfolio__item">
@@ -141,7 +124,9 @@
                                     <div class="portfolio__title">Reebok Store - Concept</div>
                                 </div>
                             </div>
-                            <a href="#" class="portfolio__link">Reebok Store - Concept</a>
+                            <div class="portfolio__item-link">
+                                <a href="#!" class="portfolio__link">Reebok Store - Concept</a>
+                            </div>
                         </div>
                         <div class="portfolio__item">
                             <div class="portfolio__img">
@@ -150,7 +135,9 @@
                                     <div class="portfolio__title">Braun Landing Page - Concept</div>
                                 </div>
                             </div>
-                            <a href="#" class="portfolio__link">Braun Landing Page - Concept</a>
+                            <div class="portfolio__item-link">
+                                <a href="#!" class="portfolio__link">Braun Landing Page - Concept</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -161,7 +148,7 @@
                 <div class="section__content">
                     <h2 class="section__title">Contacts</h2>
                     <p class="section__text">Want to know more or just chat? <br> You are welcome!</p>
-                    <a href="#" class="section__button">Send message</a>
+                    <a href="#!" class="section__button">Send message</a>
                 </div>
             </div>
         </section>
@@ -172,16 +159,16 @@
                 <div class="footer__social">
                     <div class="social__about">
                         <div class="social__item">
-                            <a href="#" class="social__link"><img src="img/in.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/in.png" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#" class="social__link"><img src="img/inst.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/inst.png" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#" class="social__link"><img src="img/be.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/be.png" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#" class="social__link"><img src="img/bl.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/bl.png" alt="" class="social__img"></a>
                         </div>
                     </div>
                     <p class="footer__text">
