--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header id="home" class="header">
         <div class="container">
-            <nav class="nav">
+            <nav class="nav anim-block">
                 <div class="container">
                     <ul class="menu">
                         <li class="menu__list lang-home"><a href="#home" class="menu__link menu__link--active" id="lang-home">Home</a></li>
@@ -41,7 +41,7 @@
                         <p class="text__profession" id="lang-profession">UX | UI designer</p>
                         <p class="text__age" id="lang-age">24 years old, Minsk</p>
                     </div>
-                    <div class="language">
+                    <div class="language anim-block">
                         <span onclick="changeLang(en);" class="language__item language__item--active">eng</span>
                         <span onclick="changeLang(ru);" class="language__item">ru</span>
                     </div>
@@ -56,14 +56,14 @@
         <section id="aboutme" class="section section--gray">
             <div class="container">
                 <div class="section__content">
-                    <h2 class="section__title">About Me</h2>
-                    <p class="section__text">
+                    <h2 class="section__title" id="lang-about-Me">About Me</h2>
+                    <p class="section__text" id="lang-text-one">
                         Hi, I'm Denis – UX/UI designer from Minsk. <br> I'm interested in design and everything connected with it.
                     </p>
-                    <p class="section__text">
+                    <p class="section__text" id="lang-text-two">
                         I'm studying at courses "Web and mobile design <br> interfaces" in IT-Academy.
                     </p>
-                    <p class="section__text">
+                    <p class="section__text" id="lang-text-three">
                         Ready to implement excellent projects <br> with wonderful people.
                     </p>
                 </div>
@@ -72,8 +72,8 @@
         <section id="skills" class="section">
             <div class="container">
                 <div class="section__content">
-                    <h2 class="section__title">Skills</h2>
-                    <h3 class="section__sub-title">I work in such programs as</h3>
+                    <h2 class="section__title" id="lang-title-skills">Skills</h2>
+                    <h3 class="section__sub-title" id="lang-subtitle-skills">I work in such programs as</h3>
                     <div class="section__wrapper">
                         <div class="section__about">
                             <div class="section__item">
@@ -104,7 +104,7 @@
         <section id="portfolio" class="section section--gray">
             <div class="container">
                 <div class="section__content">
-                    <h2 class="section__title">Portfolio</h2>
+                    <h2 class="section__title" id="lang-title-portfolio">Portfolio</h2>
                     <div class="portfolio__about">
                         <div class="portfolio__item">
                             <div class="portfolio__img">
@@ -146,9 +146,9 @@
         <section id="contacts" class="section">
             <div class="container">
                 <div class="section__content">
-                    <h2 class="section__title">Contacts</h2>
-                    <p class="section__text">Want to know more or just chat? <br> You are welcome!</p>
-                    <a href="#!" class="section__button">Send message</a>
+                    <h2 class="section__title" id="lang-title-contacts">Contacts</h2>
+                    <p class="section__text" id="lang-text-four">Want to know more or just chat? <br> You are welcome!</p>
+                    <a href="#!" class="section__button" id="lang-sand-message">Send message</a>
                 </div>
             </div>
         </section>
@@ -159,19 +159,19 @@
                 <div class="footer__social">
                     <div class="social__about">
                         <div class="social__item">
-                            <a href="#!" class="social__link"><img src="img/in.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/in.svg" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#!" class="social__link"><img src="img/inst.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/inst.svg" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#!" class="social__link"><img src="img/be.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/be.svg" alt="" class="social__img"></a>
                         </div>
                         <div class="social__item">
-                            <a href="#!" class="social__link"><img src="img/bl.png" alt="" class="social__img"></a>
+                            <a href="#!" class="social__link"><img src="img/bl.svg" alt="" class="social__img"></a>
                         </div>
                     </div>
-                    <p class="footer__text">
+                    <p class="footer__text" id="lang-text-footer">
                         Like me on <br> LinkedIn, Instagram, Behance, Dribble
                     </p>
                 </div>
